# unicop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  generate-unicode-blocks-consts  myscript  test.js  test.rs  unicop.toml
.github/workflows/: build-and-test.yml  cargo-audit.yml  formatting.yml  linting.yml  self-validate-ascii.yml  unicop.yml
example-files/: README.md  example.go  examples.ts  hello-trojan-source.c  hello-trojan-source.cpp  hello-trojan-source.kt  homoglyph.go  homoglyph.js  homoglyph.kt  homoglyph.py  homoglyph.swift  invisible.js  not-utf-8-file.ts  parse-errors.rs
examples/: allow.js  allow.py
hack/: genblocks  gentables
src/: config.rs  languages.rs  lib.rs  main.rs  rules.rs  unicode_blocks.rs  unicode_notation.rs
tests/: examples.trycmd  trycmd.rs
