[package]
name = "unicop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
tree-sitter = "0.22.6"
tree-sitter-javascript = "0.21.2"
tree-sitter-python = "0.21.0"
unic-ucd-name = "0.9.0"

[dev-dependencies]
trycmd = "0.15.2"
