[package]
name = "unicop"
version = "0.1.0"

description = """
Tool for scanning source code for potentially malicious unicode code points.
Helps prevent Trojan source bidi attacks, homoglyph attacks, invisible character attacks etc.
Intended to run manually or in CI to help with supply chain security.
"""
keywords = ["linter", "unicode", "homoglyph", "bidi", "attack"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Mullvad VPN"]
repository = "https://github.com/mullvad/unicop"
license = "GPL-3.0"

edition = "2021"
rust-version = "1.79.0"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
tree-sitter = "0.23.0"
unic-ucd-name = "0.9.0"
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.86"
glob = "0.3.1"
phf = { version = "0.11.2", features = ["macros"] }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"

# Grammars
tree-sitter-go = "0.23.1"
tree-sitter-javascript = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.23.0"
tree-sitter-swift = "0.6.0"

[dev-dependencies]
trycmd = "0.15.5"
